[gd_scene load_steps=6 format=3 uid="uid://rc6i1rqw11ca"]

[ext_resource type="Theme" uid="uid://d2lh3hpldd764" path="res://Assets/theme.tres" id="1_8w3v2"]
[ext_resource type="Script" path="res://Scenes/Ui/Menus/main_menu.gd" id="2_if78t"]
[ext_resource type="Texture2D" uid="uid://d0q2ww7ik28wo" path="res://Assets/Textures/Ui/MainMenu/Background.png" id="3_ij8sv"]
[ext_resource type="Texture2D" uid="uid://c5cjks2qwl140" path="res://Assets/Textures/icon.svg" id="4_cbnxc"]
[ext_resource type="PackedScene" uid="uid://dsq3eg7twv75p" path="res://Scenes/Ui/Menus/license_viewer.tscn" id="5_cgcka"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8w3v2")
script = ExtResource("2_if78t")

[node name="ButtonMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonMarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="Spacer" type="Control" parent="ButtonMarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 19.04

[node name="PlayButton" type="Button" parent="ButtonMarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Play"

[node name="SettingsButton" type="Button" parent="ButtonMarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Settings"

[node name="SourceCodeButton" type="Button" parent="ButtonMarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Source Code"

[node name="LicenseButton" type="Button" parent="ButtonMarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Licenses"

[node name="QuitButton" type="Button" parent="ButtonMarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Quit
"

[node name="Spacer2" type="Control" parent="ButtonMarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.62

[node name="Spacer" type="Control" parent="ButtonMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ButtonMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Cool Titel"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)

[node name="Background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_left = -319.0
offset_top = -203.0
offset_right = 3298.0
offset_bottom = 1853.0
scale = Vector2(0.729816, 0.715367)
texture = ExtResource("3_ij8sv")
expand_mode = 3

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)

[node name="GodotIcon" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 578.0
offset_top = 399.0
offset_right = 1326.0
offset_bottom = 691.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_cbnxc")

[node name="LicenseViewer" parent="." instance=ExtResource("5_cgcka")]
visible = false
layout_mode = 1

[connection signal="pressed" from="ButtonMarginContainer/HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ButtonMarginContainer/HBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ButtonMarginContainer/HBoxContainer/VBoxContainer/SourceCodeButton" to="." method="_on_source_code_button_pressed"]
[connection signal="pressed" from="ButtonMarginContainer/HBoxContainer/VBoxContainer/LicenseButton" to="." method="_on_license_button_pressed"]
[connection signal="pressed" from="ButtonMarginContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
